--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Noon - Bobjobob24</title>
+        <title>Noon v2.0 - Bobjobob24</title>
         <link rel="icon" type="image/x-icon" href="website/assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Noon UI</h1>
+                    <h1 class="mx-auto my-0 text-uppercase">Noon UI v2</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">A modification of MidnightUI originally created by Tropix126 and modified by Bobjobob24.</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="https://github.com/Bobjobob24/NoonUI/archive/master.zip">Download Now</a>
                 </div>
